--- a/Components/Pages/Register.razor
+++ b/Components/Pages/Register.razor
@@ -4,6 +4,7 @@
 <PageTitle>Register Student</PageTitle>
 
 <h2 class="mb-4 text-center bg-primary-subtle">Register Student</h2>
+<p>@sucess</p>
 
 <h3 class="mt-4 link-primary">@student!.FirstName - @student.Id</h3>
 @foreach(var course in courses)
@@ -15,10 +16,11 @@
         <span>@course.ToString()</span>
     </div>
 }
-    <div class="form-group mx-4">
-        <button type="submit" class="btn btn-primary me-2">Register Student</button>
-        <button type="button" class="btn btn-secondary" @onclick="BackToStudent">Cancel</button>
-    </div>
+<div class="form-group mx-4">
+    <button type="submit" class="btn btn-primary me-2" >Register Student</button>
+    <a  class="btn btn-secondary "href="/">Cancel</a>
+</div>
+
 
 
 
@@ -28,6 +30,11 @@
     public int Id {get;set;}
     private List<Course> courses = Helper.GetCourses();
     private List<Student> students = Helper.GetStudents();
+    public string sucess = "hello";
+    private void BackToStudent()
+    {
+        sucess ="Button well Clicked";
+    }
     
 
     
@@ -41,8 +48,5 @@
             Navigation.NavigateTo("/");
         }
     }
-    private void BackToStudent()
-    {
-        Navigation.NavigateTo("/");
-    }
+
 }
