adding non page component

--- a/Components/Pages/AddStudent.razor
+++ b/Components/Pages/AddStudent.razor
@@ -3,8 +3,7 @@
 @inject NavigationManager NavigationManager
 
 <PageTitle> Add Student</PageTitle>
-
-<h2 class="text-center mt-3">Add Student</h2>
+<Heading Name="Add Student" Styles="text-center mt-3"/>
 <EditForm 
 Model="student" 
 FormName="Students"
