--- a/Components/Pages/AllStudents.razor
+++ b/Components/Pages/AllStudents.razor
@@ -3,7 +3,7 @@
 
 <PageTitle> All Students</PageTitle>
 <div class="d-flex justify-content-between">
-    <h2>Students</h2>
+    <Heading/>
     <span><a  class="link-underline link-underline-opacity-0 link-secondary"href="/add">Add</a></span>
 </div>
 
