--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,4 +9,6 @@
 @using Registrar
 @using Registrar.Components
 @using System.ComponentModel.DataAnnotations
+@using Registrar.Models
+@using Registrar.Data
 
