--- a/Components/Pages/AddStudent.razor
+++ b/Components/Pages/AddStudent.razor
@@ -8,16 +8,19 @@
 <EditForm 
 Model="student" 
 FormName="Students"
-OnSubmit="AddOne"
+OnValidSubmit="AddOne"
 class="border bg-light border-secondary-subtle  p-4 mt-3">
+    <DataAnnotationsValidator/>
     <div class="form-group mb-3 ">
         <label for="FirstName">First Name : </label>
         <InputText class="form-control" id="FirstName" @bind-Value="student.FirstName"  />
+        <ValidationMessage For="() => student.FirstName"/>
     </div>
 
     <div class="form-group mb-3">
       <label for="lastName">Last Name : </label>
       <InputText class="form-control" id="lastName" @bind-Value="student.LastName" />
+      <ValidationMessage For="() => student.LastName"/>
     </div>
 
     <div class="form-group mb-3">
@@ -27,6 +30,7 @@ class="border bg-light border-secondary-subtle  p-4 mt-3">
         <option value="@types[1]">@types[1]</option>
         <option value="@types[2]">@types[2]</option>
     </InputSelect>
+    <ValidationMessage For="() => student.Type"/>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary me-2">Add Student</button>
